--- a/DouYu/app/build.gradle
+++ b/DouYu/app/build.gradle
@@ -10,6 +10,10 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            // 设置支持的SO库架构
+            abiFilters 'armeabi' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+        }
     }
     buildTypes {
         release {
@@ -66,4 +70,10 @@ dependencies {
     //  通用PopupWindow
     compile 'com.github.razerdp:BasePopup:v1.7.1'
 
+    compile 'com.huxq17.xrefreshview:xrefreshview:3.6.9'
+
+    compile 'com.tencent.bugly:crashreport:latest.release' //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
+    compile 'com.tencent.bugly:nativecrashreport:latest.release' //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
+
+//    compile 'com.bigkoo:convenientbanner:2.0.5'
 }
