--- a/DouYu/app/src/main/AndroidManifest.xml
+++ b/DouYu/app/src/main/AndroidManifest.xml
@@ -4,7 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_LOGS"/>
 
     <application
         android:name=".base.App"
@@ -30,7 +33,7 @@
         <!--PC直播-->
         <activity
             android:name=".ui.PcLiveVideoActivity"
-           />
+            />
 
     </application>
 
