--- a/DouYu/app/build.gradle
+++ b/DouYu/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     compile "com.android.support:support-v4:$support_version"
     compile "com.android.support:cardview-v7:$support_version"
     compile "com.android.support:design:$support_version"
-
+    compile project(path: ':mylibrary')
     compile 'io.reactivex:rxjava:1.2.7'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
